Turn off using github check by default for now

--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,10 @@ inputs:
   path:
     description: "The path to the results JSON file of running tachometer"
     required: true
+  use-check:
+    description: "Report status as a CI Check instead of using a comment [experimental]"
+    required: false
+    default: false
 runs:
   using: "node12"
   main: "dist/action.js"
