Compile JSX using sucrase for tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+#######################################################
+#
+# Project .gitignore
+#
+#######################################################
+
+lib/
+
+
+#######################################################
+#
+# Node .gitignore
+#
+#######################################################
+
 # Logs
 logs
 *.log
