--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,8 +19,8 @@ jobs:
         uses: ./
         with:
           path: tests/test-results.json
-          local-version: local-version
-          base-version: base-version
+          local-version: local-framework
+          base-version: base-framework
       # - name: Report Other Tachometer Result
       #   uses: ./
       #   with:
