--- a/action.yml
+++ b/action.yml
@@ -5,34 +5,34 @@ branding:
   icon: bar-chart-2 # clipboard, file-text, flag, trending-up, upload
   color: purple
 inputs:
-  github-token:
-    description: "The GITHUB_TOKEN for the current workflow run"
-    required: false
-    default: ${{github.token}}
   path:
     description: "The path to the results JSON file of running tachometer"
     required: true
   report-id:
     description: "A string to uniquely identify this report between other instances of tachometer-reporter-action running in this job or other jobs in the same PR"
     require: false
-  keep-old-results:
-    description: Whether to keep old results in the comment on re-runs
-    required: false
-    default: "false"
   default-open:
     description: "Whether to open this action's results table by default"
     required: false
     default: "false"
-  local-version:
-    description: "The name of the version in tachometer results (i.e. packageVersions.label config) that is under test or being built by this action"
+  keep-old-results:
+    description: Whether to keep old results in the comment on re-runs
     required: false
-  base-version:
-    description: "The name of the version in tachometer results (i.e. packageVersions.label config) that the local version should be compared to"
+    default: "false"
+  pr-bench-name:
+    description: "The name of the benchmark/version in tachometer results (i.e. benchmark.name or benchmark.version) that represents the code produced by this PR"
+    required: false
+  base-bench-name:
+    description: "The name of the benchmark/version in tachometer results (i.e. benchmark.name or benchmark.version) that this PR should be compared to"
     required: false
   use-check:
     description: "Report status as a CI Check instead of using a comment [experimental]"
     required: false
     default: "false"
+  github-token:
+    description: "The GITHUB_TOKEN for the current workflow run"
+    required: false
+    default: ${{github.token}}
 runs:
   using: "node12"
   pre: "dist/pre.js"
