Add commit link to result details

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #######################################################
 
 lib/
+trigger-pr.ps1
 
 
 #######################################################
