--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "node-html-parser": "^1.2.20",
     "pretty-bytes": "^5.3.0",
     "ua-parser-js": "^0.7.21"
   }
