Include workflow name and urls in comment footer

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "escape-string-regexp": "^4.0.0",
     "node-html-parser": "^1.2.20",
     "pretty-bytes": "^5.3.0",
     "ua-parser-js": "^0.7.21"
