Add second bench job to test multiple benches trying to report on same comment

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,13 +15,26 @@ jobs:
           node-version: "14.x"
       - run: npm ci
       - run: npm test
+      - run: |
+          # Could use this to simulate benchmark running for random number of seconds
+          echo $((($RANDOM%(5000-1000))+1000))
       - name: Report Tachometer Result
         uses: ./
         with:
           path: tests/results/test-results.json
           pr-bench-name: local-framework
           base-bench-name: base-framework
-      # - name: Report Other Tachometer Result
-      #   uses: ./
-      #   with:
-      #     path: tests/results/other-results.json
+
+  bench_2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+      - run: npm ci
+      - run: npm test
+      - name: Report Other Tachometer Result
+        uses: ./
+        with:
+          path: tests/results/other-results.json
