--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "@xstate/fsm": "^1.4.0",
     "escape-string-regexp": "^4.0.0",
     "node-html-parser": "^1.2.20",
     "pretty-bytes": "^5.3.0",
