--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,14 +17,30 @@ jobs:
       - run: npm test
         env:
           TACH_REPORTER_SKIP_SNAPSHOT_TESTS: "true"
+      - run: |
+          # Could use this to simulate benchmark running for random number of seconds
+          echo $((($RANDOM%(5000-1000))+1000))
       - name: Report Tachometer Result
         uses: andrewiggins/tachometer-reporter-action@comment-locking
         with:
           path: tests/results/test-results.json
-          report-id: test-results
+          report-id: test-bench
           pr-bench-name: local-framework
           base-bench-name: base-framework
-      # - name: Report Other Tachometer Result
-      #   uses: ./
-      #   with:
-      #     path: tests/results/other-results.json
+
+  bench_2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+      - run: npm ci
+      - run: npm test
+        env:
+          TACH_REPORTER_SKIP_SNAPSHOT_TESTS: "true"
+      - name: Report Other Tachometer Result
+        uses: andrewiggins/tachometer-reporter-action@comment-locking
+        with:
+          report-id: test-bench-2
+          path: tests/results/other-results.json
