--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "@xstate/fsm": "^1.4.0",
     "escape-string-regexp": "^4.0.0",
     "node-html-parser": "^1.2.20",
     "pretty-bytes": "^5.3.0",
-    "ua-parser-js": "^0.7.21"
+    "ua-parser-js": "^0.7.21",
+    "xstate": "^4.11.0"
   }
 }
