--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,7 +21,7 @@ jobs:
           # Could use this to simulate benchmark running for random number of seconds
           echo $((($RANDOM%(5000-1000))+1000))
       - name: Report Tachometer Result
-        uses: andrewiggins/tachometer-reporter-action@comment-locking
+        uses: andrewiggins/tachometer-reporter-action@master
         with:
           path: tests/results/test-results.json
           report-id: test-bench
@@ -40,7 +40,7 @@ jobs:
         env:
           TACH_REPORTER_SKIP_SNAPSHOT_TESTS: "true"
       - name: Report Other Tachometer Result
-        uses: andrewiggins/tachometer-reporter-action@comment-locking
+        uses: andrewiggins/tachometer-reporter-action@master
         with:
           report-id: test-bench-2
           path: tests/results/other-results.json
