Add initialize option to workflows

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,6 +22,7 @@ jobs:
         uses: ./
         with:
           path: tests/results/test-results.json
+          initialize: true
           pr-bench-name: local-framework
           base-bench-name: base-framework
 
@@ -38,3 +39,4 @@ jobs:
         uses: ./
         with:
           path: tests/results/other-results.json
+          initialize: false
