--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         uses: ./
         with:
           path: tests/results/test-results.json
+          initialize: false
           pr-bench-name: local-framework
           base-bench-name: base-framework
 
@@ -34,4 +35,5 @@ jobs:
       - name: Report Other Tachometer Result
         uses: andrewiggins/tachometer-reporter-action@master
         with:
+          initialize: true
           path: tests/results/other-results.json
