Require initialize be used with report-id to ensure comment is initialized in pre-action

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,6 +22,7 @@ jobs:
         uses: ./
         with:
           path: tests/results/test-results.json
+          report-id: test-results
           initialize: true
           pr-bench-name: local-framework
           base-bench-name: base-framework
@@ -39,4 +40,5 @@ jobs:
         uses: ./
         with:
           path: tests/results/other-results.json
+          report-id: other-results
           initialize: false
