Render generic running message if inititalize is true without a path

--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ branding:
 inputs:
   path:
     description: "The path to the results JSON file of running tachometer"
-    required: true
+    required: false
   report-id:
     description: "A string to uniquely identify this report between other instances of tachometer-reporter-action running in this job or other jobs in the same PR"
     require: false
