--- a/.github/workflows/pr-setup-job.yml
+++ b/.github/workflows/pr-setup-job.yml
@@ -35,6 +35,7 @@ jobs:
         uses: andrewiggins/tachometer-reporter-action@master
         with:
           path: tests/results/test-results.json
+          report-id: test-bench-1
           pr-bench-name: local-framework
           base-bench-name: base-framework
 
@@ -48,3 +49,4 @@ jobs:
         uses: andrewiggins/tachometer-reporter-action@master
         with:
           path: tests/results/other-results.json
+          report-id: test-bench-2
