--- a/.github/workflows/pr-multi-measure-setup-job.yml
+++ b/.github/workflows/pr-multi-measure-setup-job.yml
@@ -1,4 +1,4 @@
-name: PR Setup Job Flow
+name: PR Multi-Measurement Setup Job Flow
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Initialize tachometer comment
-        uses: andrewiggins/tachometer-reporter-action@master
+        uses: andrewiggins/tachometer-reporter-action@multiple-measurements
         with:
           initialize: true
 
@@ -27,7 +27,7 @@ jobs:
           # Could use this to simulate benchmark running for random number of seconds
           echo $((($RANDOM%(5000-1000))+1000))
       - name: Report Tachometer Result
-        uses: andrewiggins/tachometer-reporter-action@master
+        uses: andrewiggins/tachometer-reporter-action@multiple-measurements
         with:
           path: tests/results/multi-measure-results.json
           report-id: multi-bench-1
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Report Other Tachometer Result
-        uses: andrewiggins/tachometer-reporter-action@master
+        uses: andrewiggins/tachometer-reporter-action@multiple-measurements
         with:
           path: tests/results/multi-measure-other-results.json
           report-id: multi-bench-2
