--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "request": "launch",
       "name": "getCommentBody Tests",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/tests/getCommentBody.test.js"
+      "program": "${workspaceFolder}/tests/getCommentBody.test.js",
+      "outFiles": ["${workspaceFolder}/**/*.js", "!**/node_modules/**"]
     }
   ]
 }
