--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "14.x"
       - run: npm ci
-      - run: npm test
+      - run: npm run test:coverage
       - name: Report Tachometer Result
         uses: ./
         with:
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: "14.x"
       - run: npm ci
-      - run: npm test
+      - run: npm run test:coverage
       - name: Report Other Tachometer Result
         uses: andrewiggins/tachometer-reporter-action@master
         with:
