Add basic summarize option parsing
Using this commit to determinw how GitHub Actions passes in list of options

--- a/.github/workflows/pr-single.yml
+++ b/.github/workflows/pr-single.yml
@@ -24,3 +24,6 @@ jobs:
           path: tests/results/test-results.json
           pr-bench-name: local-framework
           base-bench-name: base-framework
+          summarize:
+            - test1
+            - test2
