Try a comma separated string

--- a/.github/workflows/pr-single.yml
+++ b/.github/workflows/pr-single.yml
@@ -24,6 +24,4 @@ jobs:
           path: tests/results/test-results.json
           pr-bench-name: local-framework
           base-bench-name: base-framework
-          summarize:
-            - test1
-            - test2
+          summarize: test1, test2
