--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,20 @@
         "!**/dist/**",
         "!**/node_modules/**"
       ]
+    },
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "buildReport Tests",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/tests/buildReport.test.js",
+      "outFiles": [
+        "${workspaceFolder}/lib/**/*.js",
+        "${workspaceFolder}/src/**/*.js",
+        "${workspaceFolder}/tests/**/*.js",
+        "!**/dist/**",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
