--- a/.github/workflows/pr-single.yml
+++ b/.github/workflows/pr-single.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           node-version: "14.x"
       - run: npm ci
+      - name: Log GitHub Context
+        run: node -e 'var github = require("@actions/github"); var context = github.context; console.log("context.issue =", JSON.stringify(context.issue, null, 2)); console.log("context.repo =", JSON.stringify(context.repo, null, 2)); console.log("context = ", JSON.stringify(context, null, 2));'
       - run: npm test
       - run: |
           # Could use this to simulate benchmark running for random number of seconds
