--- a/.github/workflows/workflow-run-job.yml
+++ b/.github/workflows/workflow-run-job.yml
@@ -19,13 +19,6 @@ jobs:
           node-version: "14.x"
       - run: npm ci
       - run: npm test
-      - run: |
-          # Could use this to simulate benchmark running for random number of seconds
-          echo $((($RANDOM%(5000-1000))+1000))
-      - name: Report Tachometer Result
-        uses: ./
-        with:
-          path: tests/results/test-results.json
-          pr-bench-name: local-framework
-          base-bench-name: base-framework
-          summarize: test1, test2
+      - run: git show HEAD
+      - name: Log GitHub Context
+        run: node -e 'var github = require("@actions/github"); var context = github.context; console.log("context.issue =", JSON.stringify(context.issue, null, 2)); console.log("context.repo =", JSON.stringify(context.repo, null, 2)); console.log("context = ", JSON.stringify(context, null, 2));'
