--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ branding:
   color: purple
 inputs:
   path:
-    description: "The path to the results JSON file of running tachometer"
+    description: "The path to the results JSON file of running tachometer. Accepts a glob to report multiple result files. Follows rules of @actions/glob"
     required: false
   report-id:
     description: "A string to uniquely identify this report between other instances of tachometer-reporter-action running in this job or other jobs in the same PR"
@@ -36,6 +36,9 @@ inputs:
     description: "The GITHUB_TOKEN for the current workflow run"
     required: false
     default: ${{github.token}}
+  follow-symbolic-links:
+    description: "Indicates whether to follow symbolic links"
+    default: true
 runs:
   using: "node12"
   pre: "dist/pre.js"
