--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "@actions/glob": "^0.1.1",
     "escape-string-regexp": "^4.0.0",
     "node-html-parser": "^1.2.20",
     "pretty-bytes": "^5.3.0",
