--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
     description: "A string to uniquely identify this report between other instances of tachometer-reporter-action running in this job or other jobs in the same PR"
     require: false
   initialize:
-    description: "Whether this action should initialize the comment to report results. Use this option with report-id. Useful if multiple jobs are sharing the same comment. Pass in 'true' if this job should always create the comment"
+    description: "Whether this action should initialize the comment to report results. Useful if multiple jobs are sharing the same comment. Pass in 'true' if this job should always create the comment"
     require: false
   summarize:
     description: "Specify whether to summarize (true), don't summarize any measurements (false), or which measurements to summarize (list of measurement names)"
