--- a/.github/workflows/pr-single.yml
+++ b/.github/workflows/pr-single.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm ci
       - name: Log GitHub Context
         run: node -e 'var github = require("@actions/github"); var context = github.context; console.log("context.issue =", JSON.stringify(context.issue, null, 2)); console.log("context.repo =", JSON.stringify(context.repo, null, 2)); console.log("context = ", JSON.stringify(context, null, 2));'
-      - run: npm test
+      - run: npm run test:coverage
       - run: |
           # Could use this to simulate benchmark running for random number of seconds
           echo $((($RANDOM%(5000-1000))+1000))
