Skip snapshot tests

--- a/.github/workflows/pr-single.yml
+++ b/.github/workflows/pr-single.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Log GitHub Context
         run: node -e 'var github = require("@actions/github"); var context = github.context; console.log("context.issue =", JSON.stringify(context.issue, null, 2)); console.log("context.repo =", JSON.stringify(context.repo, null, 2)); console.log("context = ", JSON.stringify(context, null, 2));'
       - run: npm run test:coverage
+        env:
+          TACH_REPORTER_SKIP_SNAPSHOT_TESTS: "true"
       - run: |
           # Could use this to simulate benchmark running for random number of seconds
           echo $((($RANDOM%(5000-1000))+1000))
