Simplify ActionInfo to just required information

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,13 @@
         "!**/dist/**",
         "!**/node_modules/**"
       ]
+    },
+    {
+      "name": "comments Test",
+      "program": "${workspaceFolder}/tests/comments.test.js",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
     }
   ]
 }
