Add initial workflow_run implementation

--- a/.github/workflows/workflow-run-job.yml
+++ b/.github/workflows/workflow-run-job.yml
@@ -1,24 +1,53 @@
-name: Workflow Run Event Example
+name: Report Tachometer Results
 
 on:
   workflow_run:
-    workflows: ["PR Setup Job Flow"]
+    workflows: ["PR Artifacts For Forks Flow"]
     branches: ["**"]
     types:
       - completed
       - requested
 
-# Just testing to see what happens...
 jobs:
-  workflow_example:
+  debug:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-      - run: npm ci
-      - run: npm test
       - run: git show HEAD
       - name: Log GitHub Context
         run: node -e 'var github = require("@actions/github"); var context = github.context; console.log("context.issue =", JSON.stringify(context.issue, null, 2)); console.log("context.repo =", JSON.stringify(context.repo, null, 2)); console.log("context = ", JSON.stringify(context, null, 2));'
+
+  report_running:
+    name: Report benchmarks are in-progress
+    runs-on: ubuntu-latest
+    # Only add the "benchmarks are running" text when the workflow_run starts
+    if: ${{ github.event.action == 'requested' }}
+    steps:
+      - name: Report Tachometer Running
+        uses: andrewiggins/tachometer-reporter-action@workflow-run-support
+        with:
+          # Set initialize true so this action just creates the comment or adds
+          # the "benchmarks are running" text
+          initialize: true
+
+  report_results:
+    name: Report benchmark results
+    runs-on: ubuntu-latest
+    # Only run this job if the event action was "completed" and the triggering
+    # workflow_run was successful
+    if: ${{ github.event.action == 'completed' && github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      # Download the artifact from the triggering workflow that contains the
+      # Tachometer results to report
+      - uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: ${{ github.event.workflow.id }}
+          run_id: ${{ github.event.workflow_run.id }}
+          name: results
+          path: results
+
+      # Create/update the comment with the latest results
+      - name: Report Tachometer Results
+        uses: andrewiggins/tachometer-reporter-action@workflow-run-support
+        with:
+          path: results/*.json
