--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@rollup/plugin-sucrase": "^3.1.0",
     "@sinonjs/fake-timers": "^6.0.1",
     "c8": "^7.2.1",
+    "clean-set": "^1.1.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "nyc": "^15.1.0",
